# poetry-bug

./: .gitignore
.github/workflows/: main.yml
app/: build.py  pyproject.toml
app/src/app/: _ops.pyx
mylib/: pyproject.toml
