[tool.poetry]
name = "app"
description = "An app"
version = "0.1.0"
authors = []
packages = [{ include = "src" }]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
"mylib" = {path = "../mylib", develop = true}
numpy = "^1.16"
cython = "^0.29.24"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12", "Cython>=0.29.5"]
